--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pbwrap = "^1.3.1"
 discord = "^1.7.3"
 Flask = "^2.0.1"
 selenium = "^3.141.0"
+pastemyst = "^2.2.6"
 
 [tool.poetry.dev-dependencies]
 
